--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <td>Name</td>
     <td>{{ object.name }}</td>
@@ -32,7 +32,7 @@
 <a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
   Films</a>
 <div class="collapse" id="collapseFilms">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Film</th>
       <th>Caption</th>
