--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <th colspan="2">Physical</th>
   </tr>
@@ -217,7 +217,7 @@
 <a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
   Lenses</a>
 <div class="collapse" id="collapseLenses">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Serial</th>
       <th>Acquired</th>
