--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <td>Film format</td>
     <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}
@@ -38,7 +38,7 @@
   Films cut from this bulk film
 </a>
 <div class="collapse" id="collapseFilms">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Film ID</th>
       <th>Title</th>
