--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <th colspan="2">Physical</th>
   </tr>
@@ -295,7 +295,7 @@
 <a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
   Cameras</a>
 <div class="collapse" id="collapseCameras">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Serial</th>
       <th>Acquired</th>
