--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <td>Mount</td>
     <td>{{ object.mount }}</td>
@@ -32,7 +32,7 @@
 <a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
   Cameras</a>
 <div class="collapse" id="collapseCameras">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Model</th>
       <th>Serial</th>
@@ -51,7 +51,7 @@
 <a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
   Lenses</a>
 <div class="collapse" id="collapseLenses">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>Model</th>
       <th>Serial</th>
