--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table class="table">
+<table class="table table-hover">
   <tr>
     <td>Film</td>
     <td>{{ object.film }}</td>
@@ -84,7 +84,7 @@
 <a data-toggle="collapse" href="#collapsePrints" role="button" aria-expanded="false" aria-controls="collapsePrints">
   Prints</a>
 <div class="collapse" id="collapsePrints">
-  <table class="table">
+  <table class="table table-hover">
     <tr>
       <th>ID</th>
     </tr>
