Convert md to html

--- a/help/templates/concepts.html
+++ b/help/templates/concepts.html
@@ -29,8 +29,8 @@ add it inline while adding cameras, lenses, films, etc.
 <h3>Unique identifiers</h3>
 
 Every object registered in CameraHub (e.g. camera, lenses, films, negatives, etc) is allocated a unique ID number,
-starting at 1 and counting up. This number is used to reference other objects. This number is often prefixed with a `#`
-for readability, e.g. _Film #99_.
+starting at 1 and counting up. This number is used to reference other objects. This number is often prefixed with a
+<em>#</em> for readability, e.g. <em>Film #99</em>.
 
 One exception where alternative naming is also used is for negatives. A negative might have an ID of #100 but it may
 also be referred to in the format 18/6, where 18 is the ID number of the film it belongs to, and 6 is the number of the
@@ -64,7 +64,7 @@ different metering modes a camera supports).
 <h3>Films and negatives</h3>
 
 If you use the cameras and lenses to take photographs, you'll want to start entering information about films and
-negatives into CameraHub. The word _negatives_ is a bit misleading as it refers to any image taken with a camera,
+negatives into CameraHub. The word <em>negatives</em> is a bit misleading as it refers to any image taken with a camera,
 including slides - which are positive!
 
 CameraHub lets you record a stash of films, which you can then load into a camera. Films are associated with a camera.
@@ -115,9 +115,9 @@ associated with cameras or lenses, or neither.
 
 <h3>Series</h3>
 
-A series is a group of camera models and/or lens models. An example of a series could be _Canon T-series_, and it could
-contain camera models such as the _Canon T80_ and _Canon T90_. Series are designed to provide visibility of camera and
-lens models that exist, and could be added to the collection. It is possible to create custom series and they can be
-used for any purpose to help you keep track of your collection. A camera or lens model can belong to more than one
-series and a series can contain a mixture of camera and lens models.
+A series is a group of camera models and/or lens models. An example of a series could be <em>Canon T-series</em>, and it
+could contain camera models such as the <em>Canon T80</em> and <em>Canon T90</em>. Series are designed to provide
+visibility of camera and lens models that exist, and could be added to the collection. It is possible to create custom
+series and they can be used for any purpose to help you keep track of your collection. A camera or lens model can belong
+to more than one series and a series can contain a mixture of camera and lens models.
 {% endblock %}
