Remove stray brace

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -180,7 +180,7 @@
     <td>{{ object.power_drive }}</td>
   </tr>
   {% endif %}
-  {% if object.continuous_fps %}}
+  {% if object.continuous_fps %}
   <tr>
     <td>Continuous fps</td>
     <td>{{ object.continuous_fps }}</td>
