Add % symbol to viewfinder coverage

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -90,7 +90,7 @@
   {% if object.viewfinder_coverage %}
   <tr>
     <td>Viewfinder coverage</td>
-    <td>{{ object.viewfinder_coverage }}</td>
+    <td>{{ object.viewfinder_coverage }}%</td>
   </tr>
   {% endif %}
 
