--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -7,63 +7,63 @@
   </tr>
   <tr>
     <td>Manufacturer</td>
-    <td>{% if object.manufacturer %}<a
+    <td>{% if object.manufacturer is not None %}<a
         href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Model</td>
     <td>{{ object.model }}</td>
   </tr>
-  {% if object.disambiguation %}
+  {% if object.disambiguation is not None %}
   <tr>
     <td>Disambiguation</td>
     <td>{{ object.disambiguation }}</td>
   </tr>
   {% endif %}
-  {% if object.fixed_mount %}
+  {% if object.fixed_mount is not None %}
   <tr>
     <td>Fixed mount</td>
     <td>{{ object.fixed_mount }}</td>
   </tr>
   <tr>
     <td>Lens model</td>
-    <td>{% if object.lensmodel %}<a
+    <td>{% if object.lensmodel is not None %}<a
         href="{% url 'lensmodel-detail' object.lensmodel.id %}">{{ object.lensmodel }}</a>{% endif %}</td>
   </tr>
   {% else %}
-  {% if object.mount %}
+  {% if object.mount is not None %}
   <tr>
     <td>Mount</td>
     <td><a href="{% url 'mount-detail' object.mount.id %}">{{ object.mount }}</a></td>
   </tr>
   {% endif %}
   {% endif %}
-  {% if object.format %}
+  {% if object.format is not None %}
   <tr>
     <td>Format</td>
     <td><a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>
     </td>
   </tr>
   {% endif %}
-  {% if object.introduced %}
+  {% if object.introduced is not None %}
   <tr>
     <td>Marketed</td>
-    <td>{{ object.introduced }}{% if object.discontinued %}-{{ object.discontinued }}{% endif %}</td>
+    <td>{{ object.introduced }}{% if object.discontinued is not None %}-{{ object.discontinued }}{% endif %}</td>
   </tr>
   {% endif %}
-  {% if object.body_type %}
+  {% if object.body_type is not None %}
   <tr>
     <td>Body type</td>
     <td>{{ object.body_type }}</td>
   </tr>
   {% endif %}
-  {% if object.weight %}
+  {% if object.weight is not None %}
   <tr>
     <td>Weight</td>
     <td>{{ object.weight }}g</td>
   </tr>
   {% endif %}
-  {% if object.negative_size %}
+  {% if object.negative_size is not None %}
   <tr>
     <td>Negative size</td>
     <td><a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a></td>
@@ -75,19 +75,19 @@
   <tr>
     <th colspan="2">Focus</th>
   </tr>
-  {% if object.focus_type %}
+  {% if object.focus_type is not None %}
   <tr>
     <td>Focus type</td>
     <td>{{ object.focus_type }}</td>
   </tr>
   {% endif %}
-  {% if object.autofocus_points %}
+  {% if object.autofocus_points is not None %}
   <tr>
     <td>Autofocus points</td>
     <td>{{ object.af_points }}</td>
   </tr>
   {% endif %}
-  {% if object.viewfinder_coverage %}
+  {% if object.viewfinder_coverage is not None %}
   <tr>
     <td>Viewfinder coverage</td>
     <td>{{ object.viewfinder_coverage }}%</td>
@@ -98,7 +98,7 @@
   <tr>
     <th colspan="2">Metering</th>
   </tr>
-  {% if object.metering %}
+  {% if object.metering is not None %}
   <tr>
     <td>Metering</td>
     <td>{{ object.metering }}</td>
@@ -137,31 +137,31 @@
   <tr>
     <th colspan="2">Shutter</th>
   </tr>
-  {% if object.shutter_type %}
+  {% if object.shutter_type is not None %}
   <tr>
     <td>Shutter type</td>
     <td>{{ object.shutter_type }}</td>
   </tr>
   {% endif %}
-  {% if object.shutter_model %}
+  {% if object.shutter_model is not None %}
   <tr>
     <td>Shutter model</td>
     <td>{{ object.shutter_model }}</td>
   </tr>
   {% endif %}
-  {% if object.bulb %}
+  {% if object.bulb is not None %}
   <tr>
     <td>Bulb</td>
     <td>{{ object.bulb }}</td>
   </tr>
   {% endif %}
-  {% if object.time %}
+  {% if object.time is not None %}
   <tr>
     <td>Time</td>
     <td>{{ object.time }}</td>
   </tr>
   {% endif %}
-  {% if object.shutter_speeds %}
+  {% if object.shutter_speeds is not None %}
   <tr>
     <td>Shutter speeds</td>
     <td>
@@ -174,13 +174,13 @@
   <tr>
     <th colspan="2">Film transport</th>
   </tr>
-  {% if object.power_drive %}
+  {% if object.power_drive is not None %}
   <tr>
     <td>Power drive</td>
     <td>{{ object.power_drive }}</td>
   </tr>
   {% endif %}
-  {% if object.continuous_fps %}
+  {% if object.continuous_fps is not None %}
   <tr>
     <td>Continuous fps</td>
     <td>{{ object.continuous_fps }}</td>
@@ -191,7 +191,7 @@
   <tr>
     <th colspan="2">Batteries</th>
   </tr>
-  {% if object.battery_qty %}
+  {% if object.battery_qty is not None %}
   <tr>
     <td>Battery quantity</td>
     <td>{{ object.battery_qty }}</td>
@@ -206,7 +206,7 @@
   <tr>
     <th colspan="2">Flash</th>
   </tr>
-  {% if object.int_flash %}
+  {% if object.int_flash is not None %}
   <tr>
     <td>Internal flash</td>
     <td>{{ object.int_flash }}</td>
@@ -216,7 +216,7 @@
     <td>{{ object.int_flash_gn }}</td>
   </tr>
   {% endif %}
-  {% if object.external_flash %}
+  {% if object.external_flash is not None %}
   <tr>
     <td>External flash</td>
     <td>{{ object.ext_flash }}</td>
@@ -230,13 +230,13 @@
     <td>{{ object.hotshoe }}</td>
   </tr>
   {% endif %}
-  {% if object.coldshoe %}
+  {% if object.coldshoe is not None %}
   <tr>
     <td>Coldshoe</td>
     <td>{{ object.coldshoe }}</td>
   </tr>
   {% endif %}
-  {% if object.flash_metering %}
+  {% if object.flash_metering is not None %}
   <tr>
     <td>Flash metering</td>
     <td>{{ object.flash_metering }}</td>
@@ -247,19 +247,19 @@
   <tr>
     <th colspan="2">Features</th>
   </tr>
-  {% if object.dof_preview %}
+  {% if object.dof_preview is not None %}
   <tr>
     <td>DoF preview</td>
     <td>{{ object.dof_preview }}</td>
   </tr>
   {% endif %}
-  {% if object.tripod %}
+  {% if object.tripod is not None %}
   <tr>
     <td>Tripod</td>
     <td>{{ object.tripod }}</td>
   </tr>
   {% endif %}
-  {% if object.cable_release %}
+  {% if object.cable_release is not None %}
   <tr>
     <td>Cable release</td>
     <td>{{ object.cable_release }}</td>
@@ -270,13 +270,13 @@
   <tr>
     <th colspan="2">Misc</th>
   </tr>
-  {% if object.notes %}
+  {% if object.notes is not None %}
   <tr>
     <td>Notes</td>
     <td>{{ object.notes }}</td>
   </tr>
   {% endif %}
-  {% if object.series %}
+  {% if object.series is not None %}
   <tr>
     <td>Series</td>
     <td>
