--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -24,7 +24,7 @@
   </tr>
   <tr>
     <td>Manufacturer</td>
-    <td>{% if object.manufacturer %}<a
+    <td>{% if object.manufacturer is not None %}<a
         href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
 </table>
