--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -4,7 +4,7 @@
 <table class="table table-hover">
   <tr>
     <td>Manufacturer</td>
-    <td>{% if object.manufacturer %}<a href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
+    <td>{% if object.manufacturer is not None %}<a href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Model</td>
@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td>Negative size</td>
-    <td>{% if object.negative_size %}<a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
+    <td>{% if object.negative_size is not None %}<a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Type</td>
