--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -4,7 +4,7 @@
 <table class="table table-hover">
   <tr>
     <td>Filmstock</td>
-    <td>{% if object.filmstock %}<a
+    <td>{% if object.filmstock is not None %}<a
         href="{% url 'filmstock-detail' object.filmstock.id %}">{{ object.filmstock }}</a>{% endif %}</td>
   </tr>
   <tr>
@@ -13,7 +13,7 @@
   </tr>
   <tr>
     <td>Film format</td>
-    <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}
+    <td>{% if object.format is not None %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}
     </td>
   </tr>
   <tr>
@@ -26,7 +26,7 @@
   </tr>
   <tr>
     <td>Camera</td>
-    <td>{% if object.camera %}<a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a>{% endif %}
+    <td>{% if object.camera is not None %}<a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a>{% endif %}
     </td>
   </tr>
   <tr>
@@ -39,7 +39,7 @@
   </tr>
   <tr>
     <td>Developer</td>
-    <td>{% if object.developer %}<a
+    <td>{% if object.developer is not None %}<a
         href="{% url 'developer-detail' object.developer.id %}">{{ object.developer }}</a>{% endif %}</td>
   </tr>
   <tr>
@@ -92,12 +92,12 @@
   </tr>
   <tr>
     <td>Processed by</td>
-    <td>{% if object.processed_by %}<a
+    <td>{% if object.processed_by is not None %}<a
         href="{% url 'person-detail' object.processed_by.id %}">{{ object.processed_by }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Archive</td>
-    <td>{% if object.archive %}<a
+    <td>{% if object.archive is not None %}<a
         href="{% url 'archive-detail' object.archive.id %}">{{ object.archive }}</a>{% endif %}</td>
   </tr>
 </table>
