--- a/schema/templates/schema/repair_detail.html
+++ b/schema/templates/schema/repair_detail.html
@@ -4,7 +4,7 @@
 <table class="table table-hover">
   <tr>
     <td>Camera</td>
-    <td>{% if object.camera %}<a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a>{% endif %}</td>
+    <td>{% if object.camera is not None %}<a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a>{% endif %}</td>
   </tr>
   <tr>
     <td>Lens</td>
