Add mm to filter thread

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -155,7 +155,7 @@
   {% if object.filter_thread is not None %}
   <tr>
     <td>Filter thread</td>
-    <td>{{ object.filter_thread }}</td>
+    <td>{{ object.filter_thread }}mm</td>
   </tr>
   {% endif %}
   {% if object.coating is not None %}
