Remove excess containers

--- a/schema/templates/base.html
+++ b/schema/templates/base.html
@@ -14,11 +14,11 @@
 
 <body>
     <div class="container">
-        <div class="container">{% block sidebar %}{% include "nav.html" %}{% endblock %}</div>
-        <div class="container">{% block heading %}{% endblock %}</div>
-        <div class="container">{% block subheading %}{% endblock %}</div>
-        <div class="container">{% block content %}{% endblock %}</div>
-        <div class="container">{% block actions %}{% endblock %}</div>
+        {% block sidebar %}{% include "nav.html" %}{% endblock %}
+        {% block heading %}{% endblock %}
+        {% block subheading %}{% endblock %}
+        {% block content %}{% endblock %}
+        {% block actions %}{% endblock %}
 
         {% block pagination %}
         {% if is_paginated %}
@@ -47,6 +47,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    </div>
 </body>
 
 </html>
