--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -9,11 +9,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Public data
@@ -37,7 +37,7 @@
             </li>
 
             {% if user.is_authenticated %}
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Private data
@@ -65,12 +65,12 @@
                 </div>
             </li>
             {% else %}
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Private data</a>
             </li>
             {% endif %}
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Help
@@ -84,7 +84,7 @@
             </li>
 
             {% if user.is_authenticated %}
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     {{ user.username }}
@@ -95,7 +95,7 @@
                 </div>
             </li>
             {% else %}
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             {% endif %}
