--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -67,7 +67,9 @@
 <table class="table table-hover">
     <tr>
         <th>Camera model</th>
-        <td>{% if object.cameramodel is not None %}<a href="{% url 'cameramodel-detail' object.cameramodel.id %}">{{ object.cameramodel }}</a>{% endif %}</td>
+        <td>{% if object.cameramodel is not None %}<a
+                href="{% url 'cameramodel-detail' object.cameramodel.slug %}">{{ object.cameramodel }}</a>{% endif %}
+        </td>
     </tr>
     <tr>
         <th>Introduced</th>
